--- a/src/main/resources/templates/reservations.html
+++ b/src/main/resources/templates/reservations.html
@@ -16,9 +16,22 @@
     </div>
     <div class="top-lane-account">
         <a th:if="${user == null}" th:href="@{/sign_in}" class="nav-button" th:text="#{eq_btn_sign_in}"></a>
-        <div th:if="${user != null}">
-            <a class="nav-button" th:href="@{/logout}" th:text="#{eq_btn_logout}"></a>
+        <div th:if="${user != null}" style="display: flex; flex-direction: column;">
+            <div style="margin-bottom: 10px;">
+                <label class="txt-white" th:text="#{nav.logged(${user.email})}"></label>
+                <label class="txt-white" th:if="${user.role == 'ADMIN'}" th:text="[ADMIN]"></label>
+            </div>
+            <button class="nav-button" th:text="#{cat_btn_logout}"
+                    th:onclick="window.location.href='/logout';"></button>
         </div>
+        <form method="get" action="#">
+            <select style="margin-left: 5px;" name="lang" onchange="this.form.submit()">
+                <option value="pl" th:selected="${#locale.language == 'pl'}">PL</option>
+                <option value="en" th:selected="${#locale.language == 'en'}">EN</option>
+                <option value="es" th:selected="${#locale.language == 'es'}">ES</option>
+                <option value="fr" th:selected="${#locale.language == 'fr'}">FR</option>
+            </select>
+        </form>
     </div>
 </div>
 <div class="center-body">
@@ -45,39 +58,6 @@
         </h2>
         <div id="reservationsContainer">
         </div>
-        <!--        <div class="res-container" th:each="reservation : ${reservationList}">-->
-        <!--            <div style="display: flex; flex-direction: column;">-->
-        <!--                <label style="font-weight: bold;" class="res-label"-->
-        <!--                       th:text="#{res.code(${reservation.reservationCode})}"></label>-->
-        <!--                <label class="res-label" th:text="#{res.status(${reservation.status})}"></label>-->
-        <!--                <label class="res-label" th:text="#{res.reservationDate(${reservation.reservationDate})}"></label>-->
-        <!--                <label class="res-label" th:text="#{res.pickupDate(${reservation.pickupDate})}"></label>-->
-        <!--                <label class="res-label" th:text="#{res.returnDate(${reservation.returnDate})}"></label>-->
-        <!--                <label class="res-label" th:text="#{res.quantity(${reservation.quantity})}"></label>-->
-        <!--                <label class="res-label" th:text="#{res.cost(${reservation.cost})}"></label>-->
-        <!--                <label class="res-label" th:if="${user.role == 'ADMIN'}"-->
-        <!--                       th:text="#{res.userFullName(${reservation.user.name}, ${reservation.user.surname})}"></label>-->
-        <!--                <label class="res-label" th:if="${user.role == 'ADMIN'}"-->
-        <!--                       th:text="#{res.userEmail(${reservation.user.email})}"></label>-->
-        <!--            </div>-->
-        <!--            <form id="statusForm" enctype="multipart/form-data" method="POST" action="/reservations/change-status">-->
-        <!--                <input type="hidden" id="hiddenMethod" name="_method" value="PUT">-->
-        <!--                <input type="hidden" name="reservationID" th:value="${reservation.reservationID}">-->
-        <!--                <div class="res-btn-div" th:if="${user.role == 'ADMIN'}">-->
-        <!--                    <button class="btn-action" th:if="${reservation.status == 'RESERVED'}" th:text="#{res_btn_pickup}"-->
-        <!--                            name="status"-->
-        <!--                            value="IN_USE" type="submit"></button>-->
-        <!--                    <button class="btn-action" th:if="${reservation.status == 'IN_USE'}" th:text="#{res_btn_return}"-->
-        <!--                            name="status"-->
-        <!--                            value="RETURNED" type="submit"></button>-->
-        <!--                    <button th:if="${reservation.status != 'CANCELLED' and reservation.status != 'RETURNED'}"-->
-        <!--                            th:text="#{res_btn_cancel}" name="status" value="CANCELLED" type="submit"></button>-->
-        <!--                </div>-->
-        <!--                <div class="res-btn-div" th:if="${reservation.status == 'RESERVED' and user.role == 'USER'}">-->
-        <!--                    <button th:text="#{res_btn_cancel}" name="status" value="CANCELLED" type="submit"></button>-->
-        <!--                </div>-->
-        <!--            </form>-->
-        <!--        </div>-->
     </div>
 </div>
 <script th:inline="javascript">
